mudando as palavras

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="home" id="home">
         <div class="home-text">
             <h1>Venha se Saborear</h1>
-            <h2>Comida, a <br>Coisa mais <br> Preciosas. </h2>
+            <h2>Comida, a <br>Coisa mais <br> Preciosa. </h2>
             <a href="#" class="btn">Saiba Mais</a>
         </div>
 
@@ -102,7 +102,7 @@
     <section class="servicos" id="servicos">
         <div class="cabecalho">
             <span>Serviços</span>
-            <h2>Fornecemos comida de melhor qualidade!</h2>
+            <h2>Fornecemos comida da melhor qualidade!</h2>
         </div>
 
         <div class="servicos-container">
